--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QN3VLC8GV7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-QN3VLC8GV7');
+    </script>
 </head>
 <body>
-
+    <div class="w-100 text-center" style="background: #000;">
+        <img src="images/ydht_awards_bg.png" alt="You Don't Have To Awards background" style="max-width: 100%; height: auto; display: block; margin: 0 auto;" />
+    </div>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -46,6 +58,7 @@
     </nav>
 
     <header id="hero" class="d-flex align-items-center">
+        <img src="images/ydht_awards_bg.png" alt="You Don't Have To Awards background" class="hero-bg-img visually-hidden" aria-hidden="true" />
         <div class="container text-center text-white">
             <h1 class="display-3 fw-bold">"YOU DON’T HAVE TO AWARD" <br> FOR INDEPENDENT AUDIO EXCELLENCE</h1>
             <p class="lead my-4">Because curiosity, chaos, and cults should come with a badge</p>
