--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     </script>
 </head>
 <body>
-    <div class="w-100 text-center" style="background: #000;">
-        <img src="images/ydht_awards_bg.png" alt="You Don't Have To Awards background" style="max-width: 100%; height: auto; display: block; margin: 0 auto;" />
-    </div>
+
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -58,7 +56,7 @@
     </nav>
 
     <header id="hero" class="d-flex align-items-center">
-        <img src="images/ydht_awards_bg.png" alt="You Don't Have To Awards background" class="hero-bg-img visually-hidden" aria-hidden="true" />
+        <!-- Background image handled by CSS -->
         <div class="container text-center text-white">
             <h1 class="display-3 fw-bold">"YOU DON’T HAVE TO AWARD" <br> FOR INDEPENDENT AUDIO EXCELLENCE</h1>
             <p class="lead my-4">Because curiosity, chaos, and cults should come with a badge</p>
